--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+#prostages_accueil
+#    path: /
+#    controller: App\Controller\ProStagesController::index
