--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,19 +1,18 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory:
-            memory: 
-                users:
-                    admin: { password: $2y$10$haumeStwFTUIjpybuRlXbucf/k5BkCXOp4Pn8PgqJoJnMYIVC.F3K, roles: ROLE_ADMIN }
-                    user: { password: $2y$10$zKlu4JFrUx11I1QBldhHY.V8eDXxjHfWT3SvVD591KN.EvChB3uuu, roles: ROLE_USER }
-                    lambda: { password: $2y$10$Tzocv.qD0Wzca5EsCEXeNe5Fps4n5/xaoeVQX2kQmFek8VPdo0hxq }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: lazy
-            provider: users_in_memory
+            provider: app_user_provider
             http_basic: true
 
             # activate different ways to authenticate
@@ -32,6 +31,9 @@ security:
         Symfony\Component\Security\Core\User\User:
             algorithm: bcrypt
             cost:      15
+        App\Entity\User:
+            algorithm: auto
+
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER # un admin est aussi un utilisateur
