Choix de bcrypt pour encoder la nouvelle entité user

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,7 +32,7 @@ security:
             algorithm: bcrypt
             cost:      15
         App\Entity\User:
-            algorithm: auto
+            algorithm: bcrypt
 
 
     role_hierarchy:
