--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,7 +13,14 @@ security:
         main:
             anonymous: lazy
             provider: app_user_provider
-            http_basic: true
+            #http_basic: true
+            guard:
+                authenticators:
+                    - App\Security\LoginAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
